@@ -92,7 +92,7 @@ exportMethods(primaryClusterType)
 exportMethods(recolorClusters)
 exportMethods(removeClusterings)
 exportMethods(removeClusters)
-exportMethods(removeUnclustered)
+exportMethods(removeUnassigned)
 exportMethods(renameClusters)
 exportMethods(requiredArgs)
 exportMethods(setToCurrent)
