@@ -23,5 +23,6 @@ The following functions are deprecated and will be made defunct; use
   the replacement indicated below:
  \itemize{
    \item{\code{combineMany}: \code{\link{makeConsensus}}}
+   \item{\code{removeUnclustered}: \code{\link{removeUnassigned}}}
  }
 }
